<resources>
    <!--Captions -->
        <!---Buttons -->
    <string name="but_switch">SWITCH</string>
    <string name="but_day">DAY</string>
    <string name="but_week">WEEK</string>
    <string name="but_month">MONTH</string>
    <string name="but_all">ALL</string>
    <string name="but_add">ADD</string>
    <string name="but_export">EXPORT</string>
    <string name="but_import">IMPORT Eee!</string>
    <string name="but_update">UPDATE</string>
    <string name="but_cancel">CANCEL</string>
    <string name="but_confirm">CONFIRM</string>
    <string name="but_delete">DELETE</string>

        <!---Other -->
    <string name="cap_dots" translatable="false">...</string>
    <string name="cap_current">Now:&#160;</string>
    <string name="cap_recent">Recent Tasks</string>
    <string name="cap_missing">Data Missing</string>
    <string name="cap_start">Start:&#160;</string>
      <string name="cap_end">End:&#160;&#160;&#160;</string><!--todo this is not a good way to do this alignment-->
    <string name="cap_task">Task:&#160; </string>
    <string name="cap_tag">Tag:&#160; </string>
    <string name="cap_check_delete">Check to Delete Task</string>
    <string name="cap_emptyHHMM">00:00</string>
    <string name="cap_alarm_label">Time to stop&#160;</string>

    <!--Hints -->
    <string name="hint_task">Type a Task</string>
    <string name="hint_tag">Type a Tag</string>
    <string name="hint_revise_event">Type to change Event\'s Task</string>
    <string name="hint_rename_task">Type to rename Task</string>
    <string name="hint_set_start_time">Select a new Start time</string>
    <string name="hint_set_end_time">Select a new End time</string>
    <string name="hint_set_start_date">Select a new Start date</string>
    <string name="hint_set_end_date">Select a new End date</string>
    <string name="hint_set_range_date">Select a date</string>
    <string name="hint_set_alarm">Set Session Limit:</string>
    <string name="hint_set_alarm_title">Select Session Length</string>

    <!--Warnings-->
    <string name="warn_events_deleted">Number of events deleted by this action =&#160;</string>
    <string name="warn_events_deleted_title">Warning: Deleting Events!</string>
    <string name="warn_task_name_merge">Warning: Task name already exists. Do you want to merge them?</string>
    <string name="warn_task_name_delete">Warning: Are you sure you want to delete this Task name?</string>
    <string name="warn_tag_name_delete">Warning: Are you sure you want to delete this Tag name?</string>
    <string name="warn_dismiss_alarm_permission">Unable to dismiss Alarm. Permission Required.</string>
    <string name="warn_set_alarm_permission">Unable to set Alarm. Permission Required.</string>
    <string name="warn_alarm_not_dismissed">The previous Reminder is still running.</string>
    <string name="warn_success">Success!</string>
    <string name="warn_permission_write">"You have to give permission to Write data."</string>
    <string name="warn_import_crazy">"Uhhh, I don't know about this. It's gonna delete everything and build a new Database. Are you sure you want to try to import? It might go horribly wrong."</string>
    <!--Errors-->
    <string name="err_end_before_start">Error: Events cannot end before start.</string>
    <string name="err_start_future">Error: Event cannot be set to start in the future.</string>
    <string name="err_end_future">Error: Event cannot be set to end in the future.</string>
    <string name="err_tag_exists">Error: Cannot rename Tag to one that already exists.</string>
    <string name="err_import_failure">Error: Sorry, I told you it was a risk.</string>
    <string name="err_export_blaim_usb">Storage not available due to device connected to USB or such things.</string>
    <!-- General Items -->
    <string name="app_name" translatable="false">Task Turner</string>
    <string name="app_company" translatable="false">ERG Dyne</string>
    <string name="app_email" translatable="false">TaskTurner@ERGDyne.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Menu Items-->
    <string name="nav_events_log">Event Log</string>
    <string name="nav_task_totals">Task Totals</string>
    <string name="nav_tag_totals">Tag Totals</string>
    <string name="nav_charts">Charts (Upcoming)</string>
    <string name="nav_export">Export Data</string>


    <!--Saved Items-->
    <string name="saved_has_reminder">hasReminder</string>
    <string name="saved_reminder_hours">hours</string>
    <string name="saved_reminder_minutes">minutes</string>
    <string name="saved_alarm_futures">futuresHack</string>

    <!-- Tutorial Items -->
    <string name="tut_first_task">
        Welcome to Task Turner!
        To get started, simply type a Task and click "SWITCH."</string>

    <string name="tut_add_tag">
        Adding Tags lets you group Tasks and view Totals by Tag.
    </string>

    <string name="tut_repeat_task">
        To repeat an existing Task, click it. Or type its name and click "SWITCH."
    </string>

    <string name="tut_stop_tracking">
        To stop tracking, click "SWITCH."
    </string>

    <string name="tut_edit_event">
        To Edit an Event, long click.
    </string>

    <string name="tut_task_totals">
        Now that you have some events, open the menu and click "Task Totals."
    </string>

    <string name="tut_edit_task">
        Long click to Edit a Task or add a Tag.
    </string>

    <string name="tut_view_task">
        Click a Task to see instances.
    </string>

    <string name="tut_edit_tag">
        Long click to Edit a Tag or view list of tagged Tasks.
    </string>
    <string name="tut_view_tag">
        Click Tag to see subtotals by Task.
    </string>
    <string name="tut_reminder">
        Setting a Session Limit will create an alarm every time you start this task.
    </string>




    <!-- Text Items -->
    <string name="txt_export_information">
        Use this tool to export data into a text file called ERGDATA.TXT in your main storage directory.
        This feature exists only for Alpha and Beta testing because right now data is lost when you uninstall or reinstall.
    </string>

    <string name="txt_no_tags">
        <p>You currently don\'t have any Tags to total.</p>


        <p>To remove a Tag:</p>
        <ul>
            <li>1) Go to Task Totals.</li>
            <li>2) Long click a Task.</li>
            <li>3) Long click a Tag.</li>
            <li>4) Click Delete.</li>
        </ul>
    </string>

    <string name="txt_charts_coming">
        Charts coming soon... maybe... will be a in premium version probably idk.
    </string>

</resources>
