<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:padding="@dimen/nav_header_vertical_spacing">

    <Button style="@style/custom_button"
        android:id="@+id/button_export"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/but_export"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_export_information"
        android:textSize="@dimen/text_size_small"
        android:layout_below="@+id/button_export"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp" />


    <Button style="@style/custom_button"
            android:id="@+id/button_import"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/but_import"/>


</RelativeLayout>