<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">
        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownHeight="wrap_content"
            android:hint="@string/hint_task"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_addTask" />

        <Button style="@style/custom_button"
            android:id="@+id/button_addTask"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/but_switch" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout_current"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        android:clickable="true">
        <TextView
            android:id="@+id/textView_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView_currentCaption"
            android:layout_toStartOf="@+id/chronometer_current"
            android:paddingStart="@dimen/pad_small_item"
            android:paddingEnd="@dimen/pad_small_item"
            android:minLines="1"
            android:maxLines="1"
            android:text="@string/cap_dots"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            />

        <Chronometer
            android:id="@+id/chronometer_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView_currentCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/cap_current"
            android:textSize="@dimen/text_size_small" />
    </RelativeLayout>

</LinearLayout>