<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        >
        <TextView
            android:id="@+id/textView_edit_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_missing"
            android:textSize="@dimen/text_size_default"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/textView_edit_duration"/>

        <TextView
            android:id="@+id/textView_edit_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_dots"
            android:textSize="@dimen/text_size_default"
            android:layout_alignBaseline="@+id/textView_edit_event"
            android:layout_alignBottom="@+id/textView_edit_event"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_revise_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:dropDownHeight="wrap_content"
            android:hint="@string/hint_revise_event"
            android:imeOptions="actionDone"
            android:maxLines="1"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_start"
            android:textSize="@dimen/text_size_default"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textView_set_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView2"
            android:layout_centerVertical="true"
            android:text="@string/cap_dots"
            android:padding="@dimen/pad_small_item"
            android:textSize="@dimen/text_size_default"/>

        <TextView
            android:id="@+id/textView_set_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView_set_start_date"
            android:layout_centerVertical="true"
            android:text="@string/cap_dots"
            android:padding="@dimen/pad_small_item"
            android:textSize="@dimen/text_size_default"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/cap_end"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/textView_set_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_dots"
            android:textSize="@dimen/text_size_default"
            android:padding="@dimen/pad_small_item"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView3" />
        <TextView
            android:id="@+id/textView_set_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_dots"
            android:textSize="@dimen/text_size_default"
            android:padding="@dimen/pad_small_item"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView_set_end_date" />
    </RelativeLayout>

</LinearLayout>